# const-str

./: .gitignore  API_REVIEW_V1.0.0.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  RELEASE_CHECKLIST_V1.0.0.md  REVIEW_SUMMARY.md  STABILITY_POLICY.md  V1_0_0_REVIEW_README.md  codecov.yml  justfile
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  coverage.yml  publish.yml
const-str/: Cargo.toml
const-str-proc-macro/: Cargo.toml
const-str-proc-macro/src/: case.rs  fmt.rs  lib.rs  verify_regex.rs
const-str/examples/: split_char_slice_demo.rs
const-str/src/: __const.rs  __proc.rs  ascii.rs  bytes.rs  case.rs  lib.rs  printable.rs  str.rs  utf16.rs  utf8.rs  utils.rs  verify_http.rs  verify_regex.rs
const-str/src/__ctfe/: ascii_case.rs  chain.rs  compare.rs  concat.rs  concat_bytes.rs  cstr.rs  encode.rs  eq_ignore_ascii_case.rs  find.rs  fmt.rs  hex.rs  hex_bytes.rs  is_ascii.rs  len.rs  net.rs  parse.rs  repeat.rs  replace.rs  sorted.rs  split.rs  squish.rs  str.rs  str_buf.rs  to_byte_array.rs  to_char_array.rs  to_str.rs  trim_ascii.rs  unwrap.rs  uuid.rs
const-str/src/__proc/: case.rs  fmt.rs  str.rs  verify_http.rs  verify_regex.rs
const-str/tests/: fmt.rs  split_char_slice.rs  test.rs
crates/const-str/: Cargo.toml
crates/const-str-proc-macro/: Cargo.toml
crates/const-str-proc-macro/src/: fmt.rs  lib.rs  regex.rs
crates/const-str/src/: ascii.rs  bytes.rs  lib.rs  printable.rs  slice.rs  str.rs  utf16.rs  utf8.rs
crates/const-str/src/__ctfe/: ascii_case.rs  compare.rs  concat.rs  concat_bytes.rs  cstr.rs  encode.rs  eq_ignore_ascii_case.rs  equal.rs  find.rs  fmt.rs  hex.rs  is_ascii.rs  net.rs  parse.rs  repeat.rs  replace.rs  sorted.rs  split.rs  squish.rs  str.rs  to_byte_array.rs  to_char_array.rs  to_str.rs  unwrap.rs
crates/const-str/src/__proc/: fmt.rs
src/: lib.rs
tests/: test.rs
