[package]
name = "const-str-proc-macro"
version = "0.3.2"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "compile-time string operations"
license = "MIT"
repository = "https://github.com/Nugine/const-str"
keywords = ["string", "const", "proc-macro"]
categories = ["text-processing", "no-std"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
regex = { version = "1.5.4", optional = true }
http = { version = "0.2.5", optional = true }
proc-macro2 = "1.0.29"
heck = { version = "0.3.3", optional = true }
