[package]
name = "const-str-proc-macro"
version = "0.5.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
description = "compile-time string operations"
license = "MIT"
repository = "https://github.com/Nugine/const-str"
keywords = ["string", "const", "proc-macro"]
categories = ["text-processing", "no-std"]
readme = "../README.md"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = "1.0.98"
quote = "1.0.20"
regex = { version = "1.5.6", optional = true }
http = { version = "0.2.8", optional = true }
proc-macro2 = "1.0.40"
heck = { version = "0.4.0", features = ["unicode"], optional = true }
