[package]
name = "const-str-proc-macro"
version = "0.6.2"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
description = "compile-time string operations"
license = "MIT"
repository = "https://github.com/Nugine/const-str"
keywords = ["string", "const", "proc-macro"]
categories = ["text-processing", "no-std"]
readme = "../README.md"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.2"
quote = "1.0.21"
regex = { version = "1.7.0", optional = true }
http = { version = "1.0.0", optional = true }
proc-macro2 = "1.0.47"
heck = { version = "0.5.0", optional = true }
