[package]
name = "const-str"
version = "0.3.2"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "compile-time string operations"
license = "MIT"
repository = "https://github.com/Nugine/const-str"
keywords = ["string", "const", "proc-macro"]
categories = ["text-processing", "no-std"]
readme = "../README.md"

[features]
default = []
verify-regex = ["const-str-proc-macro/regex"]
verify-http = ["const-str-proc-macro/http"]
case = ["const-str-proc-macro/heck"]
std = []
all = ["verify-regex", "verify-http", "case", "std"]

[package.metadata.docs.rs]
all-features = true

[dependencies.const-str-proc-macro]
version = "=0.3.2"
path = "../const-str-proc-macro"

[dev-dependencies]
regex = "1.5.4"
http = "0.2.5"
heck = "0.3.3"
