[package]
name = "const-str"
version = "0.5.7"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
description = "compile-time string operations"
license = "MIT"
repository = "https://github.com/Nugine/const-str"
keywords = ["string", "const", "proc-macro"]
categories = ["text-processing", "no-std"]
readme = "../README.md"
rust-version = "1.65.0"

[features]
default = []
std = []
proc = ["dep:const-str-proc-macro"]
regex = ["proc", "const-str-proc-macro?/regex"]
http = ["proc", "const-str-proc-macro?/http"]
case = ["proc", "const-str-proc-macro?/heck"]
all = ["std", "proc", "regex", "http", "case"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.const-str-proc-macro]
version = "0.5.7"
path = "../const-str-proc-macro"
optional = true

[dev-dependencies]
regex = "1.7.0"
http = "1.0.0"
heck = { version = "0.4.0", features = ["unicode"] }
